--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mehvash Ali</title>
+    <title>Ghazala Daud</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1 class="mainhead">Mehvash Ali</h1>
+        <h1 class="mainhead">Ghazala Daud</h1>
             <div class="flex-container">
                     <div class="it">
                         <a href="">New Arrival</a>
