--- a/index.html
+++ b/index.html
@@ -33,38 +33,38 @@
     </header>
     <div class="container">
         <div class="product">
-            <img src="image.jpg" alt="Product 1">
-            <h4>Product 1</h4>
+            <img src="https://www.alkaramstudio.com/cdn/shop/files/SS_20-24-2_Pink_303740ad-a2f0-499e-9ce3-0779cf23d0c0.jpg?v=1717743833&width=900" alt="Product 1">
+            <h4>Alkaram</h4>
             <p>PKR 3000</p>
             <button onclick="addToCart('Product 1', 3000)">Add to Cart</button>
         </div>
         <div class="product">
-            <img src="image.jpg" alt="Product 2">
-            <h4>Product 2</h4>
+            <img src="https://www.alkaramstudio.com/cdn/shop/files/SS_17-24-2_Brown_8628b938-9378-480e-9930-8302d0f58613.jpg?v=1717743848&width=900" alt="Product 2">
+            <h4>Alkaram</h4>
             <p>PKR 3000</p>
             <button onclick="addToCart('Product 2', 3000)">Add to Cart</button>
         </div>
         <div class="product">
-            <img src="image.jpg" alt="Product 3">
-            <h4>Product 3</h4>
+            <img src="https://www.alkaramstudio.com/cdn/shop/files/SS_24.1-24-2_Orange_e7203a3b-745c-4507-af0e-d493eb9eda1f.jpg?v=1717743844&width=900" alt="Product 3">
+            <h4>Alkaram</h4>
             <p>PKR 3000</p>
             <button onclick="addToCart('Product 3', 3000)">Add to Cart</button>
         </div>
         <div class="product">
-            <img src="image.jpg" alt="Product 4">
-            <h4>Product 4</h4>
+            <img src="https://www.alkaramstudio.com/cdn/shop/files/SS_22.1-24-2_Cream_751c14fb-e2b0-4e54-86ca-103c2a170f7a.jpg?v=1717743839&width=900" alt="Product 4">
+            <h4>Alkaram</h4>
             <p>PKR 3000</p>
             <button onclick="addToCart('Product 4', 3000)">Add to Cart</button>
         </div>
         <div class="product">
-            <img src="image.jpg" alt="Product 5">
-            <h4>Product 5</h4>
+            <img src="https://www.alkaramstudio.com/cdn/shop/files/SS_19.1-24-2_Black_ecd160f1-90f0-4231-9c56-8ff5ff3bffaf.jpg?v=1717743829&width=900" alt="Product 5">
+            <h4>Alkaram</h4>
             <p>PKR 3000</p>
             <button onclick="addToCart('Product 5', 3000)">Add to Cart</button>
         </div>
         <div class="product">
-            <img src="image.jpg" alt="Product 6">
-            <h4>Product 6</h4>
+            <img src="https://www.alkaramstudio.com/cdn/shop/files/SS_16.1-24-2_Turquoise_a9b4990a-6c54-4319-86ea-a03569ec385e.jpg?v=1717743825&width=900" alt="Product 6">
+            <h4>Alkaram</h4>
             <p>PKR 3000</p>
             <button onclick="addToCart('Product 6', 3000)">Add to Cart</button>
         </div>
